# rust-neuralnets

./: .gitignore  Cargo.toml  README.md  python_example.py
src/: main.rs
src/neuralnet/: activation.rs  datasets.rs  mod.rs
